--- a/styles/base.css
+++ b/styles/base.css
@@ -6,6 +6,12 @@
     --border: 1px solid rgb(0 0 0 / 0.1);
 }
 
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 nav ul {
     display: flex;
     justify-content: space-evenly;
