--- a/styles/base.css
+++ b/styles/base.css
@@ -29,6 +29,12 @@ nav a:hover{
     text-decoration: overline;
 }
 
+nav {
+	background-color: #1576b6;
+	margin: 0 auto;
+	max-width: 800px;
+}
+
 body {
     font-size: 16px;
     font-family: Roboto, Arial, sans-serif;
