--- a/styles/base.css
+++ b/styles/base.css
@@ -40,11 +40,15 @@ body {
     font-family: Roboto, Arial, sans-serif;
 }
 
+nav ul li {
+    flex: 1 0 auto;
+}
+
 .card {
     margin: 1rem;
     border: 1px solid rgb(0 0 0 / 0.1);
     padding: 1rem;
     background-color: #ddd;
-    color: #000;
+    color: #ffffff;
 }
 
