--- a/week02/styles/media-query-large.css
+++ b/week02/styles/media-query-large.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 500px) {
   header {
-    background-color: #000;
+    background-color: #798cec;
     color: #fff;
   }
   
