--- a/styles/base.css
+++ b/styles/base.css
@@ -44,7 +44,6 @@ body {
     color: #333;
 }
 
-/* styles/layout.css */
 main {
     display: flex;
     flex-wrap: wrap;
@@ -52,38 +51,38 @@ main {
 }
 
 .card {
-    flex: 1 1 400px; /* Increased base width to accommodate layout changes */
+    flex: 1 1 400px;
     margin: 1rem;
     border: 1px solid rgb(0 0 0 / 0.1);
     padding: 1rem;
     background-color: #ddd;
     color: #333;
-    display: flex; /* Enable flexbox for items within the card */
-    flex-direction: column; /* Stack items vertically by default */
-    align-items: center; /* Center items horizontally */
-    text-align: center; /* Center text within the card */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .about-card {
-    align-items: flex-start; /* Align items to the left in the about card */
-    text-align: left; /* Align text to the left in the about card */
+    align-items: flex-start;
+    text-align: left;
 }
 
 .about-card img {
-    max-width: 150px; /* Adjust image size as needed */
+    max-width: 150px;
     height: auto;
     margin-bottom: 0.5rem;
-    align-self: flex-end; /* Push image to the right */
-    margin-left: 1rem; /* Add some space between text and image */
+    align-self: flex-end;
+    margin-left: 1rem;
 }
 
 .about-card .intro {
-    margin-top: 0; /* Remove default top margin */
-    margin-bottom: 1rem; /* Add space below the intro paragraph */
+    margin-top: 0; 
+    margin-bottom: 1rem;
 }
 
 .about-card .location-heading {
-    margin-top: 1.5rem; /* Add more space before the location heading */
+    margin-top: 1.5rem;
     margin-bottom: 0.5rem;
 }
 
@@ -91,7 +90,7 @@ main {
     color: #056db3;
     margin-bottom: 0.5rem;
     margin-top: 1rem;
-    width: 100%; /* Ensure heading takes full width for alignment context */
+    width: 100%;
 }
 
 .card h2:first-child {
