--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -4,73 +4,67 @@
   }
 
   header {
-    padding: 20px 0;
+    padding: 20px 30px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
   }
 
-  nav ul {
-    flex-direction: row;
-  }
-
-  nav a {
-    padding: 10px 20px;
-  }
-
-  main {
-    padding: 30px 0;
-  }
-
-  .temple-list {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
-    gap: 30px;
-  }
-
-  .temple-card {
-    text-align: left;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 20px;
-  }
-
-  .temple-card img {
-    max-width: 200px;
-    margin-right: 20px;
+  header h1 {
     margin-bottom: 0;
   }
 
-  .temple-card .info {
-    flex-grow: 1;
+  nav ul {
+    flex-direction: row; 
   }
 
-  .temple-card a {
-    margin-top: 15px;
+  nav li {
+    margin-left: 20px;
+  }
+
+  nav li:first-child {
+    margin-left: 0;
+  }
+
+  nav a {
+    padding: 10px 15px;
   }
 
   main {
+    padding: 30px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
   }
 
-  .temple-card {
-    
-    display: block;
-    text-align: center;
+  main h2 {
+    text-align: left;
+    grid-column: 1 / -1; 
+    margin-bottom: 30px;
   }
 
-  .temple-card img {
-    max-width: 100%;
-    margin-right: 0;
+  main figure {
+    margin: 0;
   }
 
-  .temple-card .info {
-    flex-grow: 0;
+  main figure img {
+    border-radius: 8px;
+    margin-bottom: 10px;
   }
 
-  .temple-card a {
-    margin-top: 10px;
+  main figcaption {
+    font-size: 1em;
+  }
+
+  footer {
+    padding: 20px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 40px;
+  }
+
+  footer p {
+    margin: 0;
   }
 }
