--- a/styles/temples.css
+++ b/styles/temples.css
@@ -85,10 +85,17 @@ footer {
   background-color: #eee;
   color: #777;
   font-size: 0.9em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 footer p {
   margin: 5px 0;
+}
+
+footer p:first-child {
+  order: -1;
 }
 
 footer .highlight {
