--- a/styles/temples.css
+++ b/styles/temples.css
@@ -15,8 +15,10 @@ body {
 
 header {
   background-color: #eee;
-  padding: 15px 0;
-  text-align: center;
+  padding: 15px 20px;
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
   margin-bottom: 20px;
 }
 
@@ -41,6 +43,11 @@ nav a {
   color: #555;
   border-radius: 5px;
   transition: background-color 0.3s ease;
+}
+
+nav a:hover {
+  background-color: #ddd;
+  color: #007bff;
 }
 
 nav a:hover {
@@ -83,7 +90,7 @@ footer {
   padding: 20px 0;
   margin-top: 30px;
   background-color: #eee;
-  color: #777;
+  color: #5300b8;
   font-size: 0.9em;
   display: flex;
   flex-direction: column;
