--- a/styles/temples.css
+++ b/styles/temples.css
@@ -89,8 +89,8 @@ footer {
   text-align: center;
   padding: 20px 0;
   margin-top: 30px;
-  background-color: #eee;
-  color: #5300b8;
+  background-color: #8800ff;
+  color: #ffffff;
   font-size: 0.9em;
   display: flex;
   flex-direction: column;
