--- a/styles/place.css
+++ b/styles/place.css
@@ -1,6 +1,8 @@
 footer {
 	margin-top: 1rem;
-	border-top: 1px solid rgb(0 0 0 / 0.1);
-	padding: 0.5rem 0;
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: blueviolet;
+    color: white;
 	font-size: smaller;
+	text-align: center;
 }
