--- a/styles/place.css
+++ b/styles/place.css
@@ -56,7 +56,7 @@ footer {
   color: white;
   padding: 20px;
   border-radius: 8px;
-  text-align: center;
+  text-align: right;
   max-width: 250px;
   margin: 20px auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
