--- a/styles/place.css
+++ b/styles/place.css
@@ -56,8 +56,8 @@ footer {
   color: white;
   padding: 20px;
   border-radius: 8px;
-  text-align: right;
-  max-width: 250px;
+  text-align: center;
+  max-width: 110px;
   margin: 20px auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -82,4 +82,16 @@ footer {
 #weather-temperature {
   font-size: 1.5em;
   font-weight: bold;
+}
+
+.page-container {
+  font-family: Arial, sans-serif;
+  margin: 20px auto;
+  background-color: #f4f4f4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  max-width: 900px;
+  padding: 10px;
 }
