--- a/styles/place.css
+++ b/styles/place.css
@@ -58,7 +58,7 @@ footer {
   border-radius: 8px;
   text-align: center;
   max-width: 110px;
-  margin: 20px auto;
+  margin: 40px 20px 20px auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
