--- a/styles/place.css
+++ b/styles/place.css
@@ -74,3 +74,15 @@ footer {
     height: 40vh; /* Adjust height for smaller screens */
   }
 }
+
+.dm-serif-text-regular {
+  font-family: "DM Serif Text", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.dm-serif-text-regular-italic {
+  font-family: "DM Serif Text", serif;
+  font-weight: 400;
+  font-style: italic;
+}
