--- a/project/styles/stieplan.css
+++ b/project/styles/stieplan.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap');
 
-/* --- Basic Variables --- */
 :root {
-    --primary-color: #2c3e50;  /* A simple, dark slate blue */
-    --background-color: #f4f4f9; /* Lighter grey background */
+    --primary-color: #2c3e50;
+    --background-color: #f4f4f9;
     --box-color: #ffffff;
     --text-color: #333333;
     --border-color: #dddddd;
